--- a/src/templates/post_detail.html
+++ b/src/templates/post_detail.html
@@ -3,10 +3,9 @@
 
 <body>
 <h1>{{ title }} is working</h1>
-{% for obj in object_list %}
 
-{{ obj.title }}<br/>
 
-{% endfor %}
+<p>{{ instance.title }}</p>
+
 </body>
 </html>
