dynamic url routing - detail

--- a/src/templates/post_detail.html
+++ b/src/templates/post_detail.html
@@ -2,10 +2,7 @@
 <html>
 
 <body>
-<h1>{{ title }} is working</h1>
-
-
-<p>{{ instance.title }}</p>
+<h1>{{ instance.title }}</h1>
 
 </body>
 </html>
