added get_absolute_url; uses namespaces and names

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -5,7 +5,8 @@
 <h1>{{ title }} is working</h1>
 {% for obj in object_list %}
 
-{{ obj.title }}<br/>
+
+<a href='{{ obj.get_absolute_url }}'>{{ obj.title }}</a><br/>
 
 {% endfor %}
 </body>
