--- a/src/templates/post_detail.html
+++ b/src/templates/post_detail.html
@@ -2,6 +2,13 @@
 <html>
 
 <body>
+{% if messages %}
+<ul class="messages">
+	{% for message in messages %}
+	<li {% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+	{% endfor %}
+</ul>
+{% endif %}
 <h1>{{ instance.title }}</h1>
 
 </body>
