--- a/src/templates/post_detail.html
+++ b/src/templates/post_detail.html
@@ -1,15 +1,6 @@
-<!-- DOCTYPE html -->
-<html>
-
-<body>
-{% if messages %}
-<ul class="messages">
-	{% for message in messages %}
-	<li {% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
-	{% endfor %}
-</ul>
-{% endif %}
+{% extends "base.html" %}
+{% block head_title %}{{ instance.title }} | {{ block.super }}{% endblock head_title %}
+{% block content %}
 <h1>{{ instance.title }}</h1>
 
-</body>
-</html>
+{% endblock content %}
