--- a/src/templates/post_detail.html
+++ b/src/templates/post_detail.html
@@ -1,6 +1,13 @@
 {% extends "base.html" %}
 {% block head_title %}{{ instance.title }} | {{ block.super }}{% endblock head_title %}
 {% block content %}
-<h1>{{ instance.title }}</h1>
+
+<div class='col-sm-6 col-sm-offset-3'>
+	{% if instance.image %}
+		<img src="{{ instance.image.url }}" class="img-responsive"/>
+	{% endif %}
+	<h1>{{ instance.title }} <small>{{ instance.timestamp }}</small></h1>
+	<p>{{ instance.content }}</p>
+</div>
 
 {% endblock content %}
