--- a/src/templates/post_form.html
+++ b/src/templates/post_form.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <h1>Post Form</h1>
-<form method="POST" action="">
+<form method="POST" action="" enctype="multipart/form-data">
 {% csrf_token %}
 {{ form.as_p }}
 <input type="submit" value="Create Post"/>
