--- a/src/templates/post_list.html
+++ b/src/templates/post_list.html
@@ -1,12 +1,35 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1>{{ title }} is working</h1>
+<h1>Posts</h1>
+<div class="row">
 	{% for obj in object_list %}
 
-
-	<a href='{{ obj.get_absolute_url }}'>{{ obj.title }}</a><br/>
-
+	<div class='col-sm-6'>
+		<div class="thumbnail">
+			<div class="caption">
+				<h3><a href='{{ obj.get_absolute_url }}'>{{ obj.title }}</a><small>{{ obj.timestamp|timesince }}</small></h3>
+				<p>{{ obj.content }}</p>
+				<p><a href="{{ obj.get_absolute_url }}" class="btn btn-primary" rold="button">View</a></p>
+			</div>
+		</div>
+	</div>
+	{% cycle "" "</div><div class='row'>" %}
 	{% endfor %}
+</div>
+<div class="pagination">
+    <span class="step-links">
+        {% if object_list.has_previous %}
+            <a href="?{{ page_request_var }}={{ object_list.previous_page_number }}">previous</a>
+        {% endif %}
 
+        <span class="current">
+            Page {{ object_list.number }} of {{ object_list.paginator.num_pages }}.
+        </span>
+
+        {% if object_list.has_next %}
+            <a href="?{{ page_request_var }}={{ object_list.next_page_number }}">next</a>
+        {% endif %}
+    </span>
+</div>
 {% endblock content %}
