--- a/src/templates/post_list.html
+++ b/src/templates/post_list.html
@@ -8,7 +8,7 @@
 	<div class='col-sm-6'>
 		<div class="thumbnail">
 			<div class="caption">
-				<h3><a href='{{ obj.get_absolute_url }}'>{{ obj.title }}</a><small>{{ obj.timestamp|timesince }}</small></h3>
+				<h3><a href='{{ obj.get_absolute_url }}'>{{ obj.title }}</a><small>{{ obj.publish|timesince }}</small></h3>
 				<p>{{ obj.content }}</p>
 				<p><a href="{{ obj.get_absolute_url }}" class="btn btn-primary" rold="button">View</a></p>
 			</div>
